syntax = "proto3";
package pizzatribes;

option go_package = "github.com/fnatte/pizza-tribes/internal/game/models";

enum AppearanceCategory {
  BODY = 0;
  EYES = 1;
  MOUTH = 2;
  FEET = 3;
  TAIL = 4;
  OUTFIT = 5;
  EYES_EXTRA1 = 6;
  EYES_EXTRA2 = 7;
  HAT = 8;
  LEFT_HAND = 9;
  RIGHT_HAND = 10;
}

message AppearancePart {
  string id = 1;
  AppearanceCategory category = 2;
  bool free = 3;
}

message MouseAppearance {
  message PartRef {
    string id = 1;
    int32 color = 2;
  }

  map<int32, PartRef> parts = 1;
}
